--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   pointer-events: none;
 }
 
+h1 {
+  font-family: 'Bigelow Rules';
+  font-size: 87px;
+  color: #0ccac4;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
